# discord-gcal-bot

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  google_calendar.py  main.py  pyproject.toml  reminder_service.py  setup.py
config/: .env.example
docker/: Dockerfile  docker-entrypoint.sh
scripts/: setup.py
src/: __init__.py  google_calendar.py  main.py  reminder_service.py
